# vcl-production

./: .gitignore  PPC-OAT-UAT-Signoff-2026-04-17.docx  README.md  UAT-Signoff-v2-2026-04-15.docx  carton-visualisation-all-styles.jsx  license.txt  pyproject.toml  requirements.txt  setup.py
docs/: dev_cleanup_execution_layer.md  dev_production_planner_FINAL.md  ppc-system-design.md  vcl_production_planner_v3.html
docs/testing/: README.md  oat-plan.md  sign-off.md  test-data.md  uat-plan.md
production_log/: hooks.py  install.py  modules.txt  patches.txt  tasks.py  utils.py
production_log/api/: workstation_type.py
production_log/events/: downtime_entry.py  production_entry.py
production_log/fixtures/: print_format.json  production_station.json
production_log/job_card_tracking/: utils.py
production_log/patches/: patch_v5_0.py  patch_v5_1.py  patch_v5_2.py  patch_v5_3.py  patch_v5_4.py  patch_v5_5.py
production_log/patches/v1_0/: remove_job_card_production_entry.py  remove_production_execution_layer.py  rename_workspace_to_vcl_production.py  setup_production_stations.py  setup_roles_and_permissions.py
production_log/patches/v2_0/: add_carton_sfk_flag.py  seed_ppc_master_data.py  setup_ppc_custom_fields.py
production_log/patches/v3_0/: remove_execution_layer.py
production_log/patches/v4_0/: backfill_job_status.py  (+4 more)
testing/: ETR-UAT-Comprehensive.md  PPC-OAT-UAT-Signoff-2026-04-17.md  VCL-OAT-Comprehensive.md  VCL-UAT-Comprehensive.md  phase1-oat-master-data.csv  phase1-uat-master-data.csv  phase2-oat-daily-schedule.csv  phase2-uat-daily-schedule.csv
(+98 files in other folders)
